// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SearchOverlay should match snapshot after icon clicked 1`] = `
<div>
  <div
    class="fixed inset-0 bg-black/75 z-[9999] flex flex-col items-center pt-16"
  >
    <div
      class="relative w-[386px] h-[32px]  mb-16"
    >
      <input
        class="flex-1 rounded-[3px] border border-[#CCD7E6] focus:border-[#1CA1C1] text-[#475466] text-sm px-2 focus:outline-none w-full h-full bg-white"
        name="search icons"
        type="text"
        value=""
      />
      <svg
        class="text-[#94A1B3] text-sm absolute right-4 top-1/2 -translate-y-1/2 cursor-pointer"
        data-testid="icon-svg"
      />
    </div>
    <div
      class="flex justify-center items-center gap-8 flex-wrap max-w-5xl px-4"
    >
      <div
        data-testid="icon-spreadsheet"
        style="cursor: pointer;"
      >
        <img
          alt="Spreadsheet"
          src="/icons/spreadsheet.webp"
        />
        <span>
          Spreadsheet
        </span>
      </div>
      <div
        data-testid="icon-filemanager"
        style="cursor: pointer;"
      >
        <img
          alt="File Manager"
          src="/icons/filemanager.webp"
        />
        <span>
          File Manager
        </span>
      </div>
      <div
        data-testid="icon-pivot"
        style="cursor: pointer;"
      >
        <img
          alt="Pivot"
          src="/icons/pivot.webp"
        />
        <span>
          Pivot
        </span>
      </div>
      <div
        data-testid="icon-kanban"
        style="cursor: pointer;"
      >
        <img
          alt="Kanban"
          src="/icons/kanban.webp"
        />
        <span>
          Kanban
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`SearchOverlay should match snapshot on initial load 1`] = `
<div>
  <div
    class="fixed inset-0 bg-black/75 z-[9999] flex flex-col items-center pt-16"
  >
    <div
      class="relative w-[386px] h-[32px]  mb-16"
    >
      <input
        class="flex-1 rounded-[3px] border border-[#CCD7E6] focus:border-[#1CA1C1] text-[#475466] text-sm px-2 focus:outline-none w-full h-full bg-white"
        name="search icons"
        type="text"
        value=""
      />
      <svg
        class="text-[#94A1B3] text-sm absolute right-4 top-1/2 -translate-y-1/2 cursor-pointer"
        data-testid="icon-svg"
      />
    </div>
    <div
      class="flex justify-center items-center gap-8 flex-wrap max-w-5xl px-4"
    >
      <div
        data-testid="icon-spreadsheet"
        style="cursor: pointer;"
      >
        <img
          alt="Spreadsheet"
          src="/icons/spreadsheet.webp"
        />
        <span>
          Spreadsheet
        </span>
      </div>
      <div
        data-testid="icon-filemanager"
        style="cursor: pointer;"
      >
        <img
          alt="File Manager"
          src="/icons/filemanager.webp"
        />
        <span>
          File Manager
        </span>
      </div>
      <div
        data-testid="icon-pivot"
        style="cursor: pointer;"
      >
        <img
          alt="Pivot"
          src="/icons/pivot.webp"
        />
        <span>
          Pivot
        </span>
      </div>
      <div
        data-testid="icon-kanban"
        style="cursor: pointer;"
      >
        <img
          alt="Kanban"
          src="/icons/kanban.webp"
        />
        <span>
          Kanban
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`SearchOverlay should match snapshot with search input filled 1`] = `
<div>
  <div
    class="fixed inset-0 bg-black/75 z-[9999] flex flex-col items-center pt-16"
  >
    <div
      class="relative w-[386px] h-[32px]  mb-16"
    >
      <input
        class="flex-1 rounded-[3px] border border-[#CCD7E6] focus:border-[#1CA1C1] text-[#475466] text-sm px-2 focus:outline-none w-full h-full bg-white"
        name="search icons"
        type="text"
        value="File"
      />
      <svg
        class="text-[#94A1B3] text-sm absolute right-4 top-1/2 -translate-y-1/2 cursor-pointer"
        data-testid="icon-svg"
      />
    </div>
    <div
      class="flex justify-center items-center gap-8 flex-wrap max-w-5xl px-4"
    >
      <div
        data-testid="icon-filemanager"
        style="cursor: pointer;"
      >
        <img
          alt="File Manager"
          src="/icons/filemanager.webp"
        />
        <span>
          File Manager
        </span>
      </div>
    </div>
  </div>
</div>
`;
